--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
     <section class="portfolio">
         <div class="container">
             <div class="portfolio-title">
-                <h2 class="title-1">Portfolio</h2>
+                <h2 class="title-1">Portfolio. My projects.</h2>
             </div>
 
             <div class="project" data-aos="flip-up">
                 <img src="./img/portfolio/11.jpg" alt="Online fashion store" class="project-img">
-                <h3 class="project-title"><a href="#!">Online fashion store - Homepage</a></h3>
+                <h3 class="project-title"><a href="#!">CV - Homepage</a></h3>
             </div>
 
             <div class="project" data-aos="flip-up">
                 <img src="./img/portfolio/22.jpg" alt="Reebok Store" class="project-img">
-                <h3 class="project-title"><a href="#!">Reebok Store - Concept</a></h3>
+                <h3 class="project-title"><a href="#!">CV - Homepage</a></h3>
             </div>
 
             <div class="project" data-aos="flip-up">
